[package]
name = "audio_player"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
cpal = "0.16.0"
crossterm = "0.29.0"
rand = { version = "0.9.2", features = ["serde"] }
ratatui = { version = "0.29.0", features = ["serde", "scrolling-regions"] }
serde = { version = "1.0.219", features = ["derive"] }
symphonia = "0.5.4"
tokio = "1.47.1"
