[package]
name = "audio_player"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = { version = "0.9.2", features = ["serde"] }
ratatui = { version = "0.29.0", features = ["serde", "scrolling-regions"] }
serde = { version = "1.0.219", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["all-codecs"] }
tokio = { version = "1.47.1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
pulse = { version = "2.30.1", package = "libpulse-binding" }
psimple = { version = "2.29.0", package = "libpulse-simple-binding" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.16.0"
rubato = "0.16.2"
